# libdcs

./: .editorconfig  .gitignore  Makefile.in  README.md  libdcs.doap  meson.build  meson_options.txt
doc/: Doxyfile  Doxyfile.in  meson.build
examples/: object.c
src/: dcs.h  macros.h  meson.build  object.c  object.h  util.h
src/dcs/: common.h  meson.build  object.c  object.h
src/examples/: meson.build
tests/: meson.build  object-test.c
