option('enable-docs',
         type: 'boolean',
        value: false,
  description: 'Build documentation',
)

option('enable-examples',
         type: 'boolean',
        value: false,
  description: 'Build examples'
)

option('enable-tests',
         type: 'boolean',
        value: true,
  description: 'Build tests'
)

option('shared-lib',
         type: 'boolean',
        value: false,
  description: 'Build shared library'
)
